crates/alder-parse/src/item/snapshots/alder_parse__item__tests__async_declaration_requires_fn.snap
---
source: crates/alder-parse/src/item/mod.rs
description: "async answer() Number { 42 }"
---
Fn(
    Keyword(
        1,
        7,
    ),
    1,
    1,
)
