crates/alder-parse/src/item/snapshots/alder_parse__item__tests__error_attr_then_non_item.snap
---
source: crates/alder-parse/src/item/mod.rs
description: "#[derive(Show)] 42"
---
Start(
    1,
    17,
)
