crates/alder-parse/src/item/snapshots/alder_parse__item__tests__multiple_attrs.snap
---
source: crates/alder-parse/src/item/mod.rs
description: "#[extern]\n#[durable_object]\ntype Counter\n"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 3,
            column: 13,
        },
    },
    value: Item {
        attributes: [
            Located {
                region: Region {
                    start: Position {
                        line: 1,
                        column: 1,
                    },
                    end: Position {
                        line: 1,
                        column: 10,
                    },
                },
                value: Attribute {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 1,
                                column: 3,
                            },
                            end: Position {
                                line: 1,
                                column: 9,
                            },
                        },
                        value: "extern",
                    },
                    args: [],
                },
            },
            Located {
                region: Region {
                    start: Position {
                        line: 2,
                        column: 1,
                    },
                    end: Position {
                        line: 2,
                        column: 18,
                    },
                },
                value: Attribute {
                    name: Located {
                        region: Region {
                            start: Position {
                                line: 2,
                                column: 3,
                            },
                            end: Position {
                                line: 2,
                                column: 17,
                            },
                        },
                        value: "durable_object",
                    },
                    args: [],
                },
            },
        ],
        visibility: Private,
        kind: OpaqueType(
            Located {
                region: Region {
                    start: Position {
                        line: 3,
                        column: 6,
                    },
                    end: Position {
                        line: 3,
                        column: 13,
                    },
                },
                value: "Counter",
            },
        ),
    },
}
