crates/alder-parse/src/item/snapshots/alder_parse__item__tests__pub_enum.snap
---
source: crates/alder-parse/src/item/mod.rs
description: "pub enum Color { Red, Green }"
---
Located {
    region: Region {
        start: Position {
            line: 1,
            column: 1,
        },
        end: Position {
            line: 1,
            column: 30,
        },
    },
    value: Item {
        attributes: [],
        visibility: Pub(
            Region {
                start: Position {
                    line: 1,
                    column: 1,
                },
                end: Position {
                    line: 1,
                    column: 4,
                },
            },
        ),
        kind: Enum(
            EnumDecl {
                name: Located {
                    region: Region {
                        start: Position {
                            line: 1,
                            column: 10,
                        },
                        end: Position {
                            line: 1,
                            column: 15,
                        },
                    },
                    value: "Color",
                },
                params: [],
                variants: [
                    Variant {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 18,
                                },
                                end: Position {
                                    line: 1,
                                    column: 21,
                                },
                            },
                            value: "Red",
                        },
                        payload: Unit,
                    },
                    Variant {
                        name: Located {
                            region: Region {
                                start: Position {
                                    line: 1,
                                    column: 23,
                                },
                                end: Position {
                                    line: 1,
                                    column: 28,
                                },
                            },
                            value: "Green",
                        },
                        payload: Unit,
                    },
                ],
            },
        ),
    },
}
